syntax = "proto3";

option csharp_namespace = "Greetings";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  reserved 1;
  string languageCode = 2;
  string firstName = 3;
  string lastName = 4;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  string from = 2;
}

